--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 # enable directory browsing
 Options All +Indexes
 
-<FilesMatch "^(reservationAdmin\.php|reservationEdit\.php)$">
+<FilesMatch "^(reservationAdmin\.php|reservationEdit\.php|feedbackAdmin\.php|feedbackEdit\.php)$">
 AuthType Basic
 AuthName "Restricted Access"
 
