changed htaccess file

--- a/.htaccess
+++ b/.htaccess
@@ -6,10 +6,10 @@ AuthType Basic
 AuthName "Restricted Access"
 
 #below line is the path on server, please change it to your own path
-#AuthUserFile  /home/jin23000/public_html/PHP_team18/.
+AuthUserFile  /home/jin23000/public_html/PHP_team18/.htpasswd
 
 # below line is the path inside docker
-AuthUserFile  /var/www/html/PHP_Team18/.htpasswd
+#AuthUserFile  /var/www/html/PHP_Team18/.htpasswd
 Require user admin
 </FilesMatch>
 
